candle-einops-macros/tests/ui/fail/einsum-multiple-arrows.stderr
error: einsum equation requires exactly one explicit `->`
 --> tests/ui/fail/einsum-multiple-arrows.rs:4:21
  |
4 |     let _ = einsum!("row -> row -> row", ());
  |                     ^^^^^^^^^^^^^^^^^^^
